# finetune-bench

./: .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
adapters/: base.py  cfpb.py
artifacts/: data_audit_report.json  dp_results.json  mia_results.json  model_card.md
docs/plans/: 2026-03-26-finetune-bench.md  2026-03-30-gpu-profiling-mixed-precision-design.md  2026-03-30-gpu-profiling-mixed-precision.md
evaluation/: calibration.py  export.py  metrics.py  robustness.py
models/: baselines.py  fusion_model.py
privacy/: _batch.py  data_auditor.py  dp_training.py  membership_inference.py  vmap_dp.py
results/: all_results.json  amp_comparison.json  class_names.json  latency_results.json  robustness_results.json  training_log.txt  v2_results.json
scripts/: download_data.py  generate_curves.py  generate_model_card.py  generate_privacy_charts.py  generate_tables.py  modal_privacy.py  modal_run.py  run_all_experiments.py  run_v2_experiments.py
tests/: test_adapter.py  test_amp_config.py  test_calibration.py  test_data_auditor.py  test_determinism.py  test_dp_training.py  test_export.py  test_gpu_profiler.py  test_membership_inference.py  test_model.py  test_model_card.py  test_overfit_smoke.py  test_robustness.py  test_vmap_dp.py
tests/fixtures/: baseline_results.json  data_audit_report.json  dp_results.json  mia_results.json
training/: config.py  gpu_profiler.py  train.py
