[project]
name = "finetune-bench"
version = "0.1.0"
description = "Multimodal text+tabular classification benchmark with robustness training and corruption evaluation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mlflow>=2.5.0",
    "pydantic>=2.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["adapters*", "models*", "training*", "evaluation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
