[project]
name = "finetune-bench"
version = "0.1.0"
description = "Multimodal text+tabular classification benchmark with robustness training and corruption evaluation"
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.2",
    "transformers==4.57.6",
    "scikit-learn==1.8.0",
    "lightgbm==4.6.0",
    "pandas==2.3.3",
    "numpy==1.26.4",
    "mlflow==3.10.1",
    "pydantic==2.12.5",
    "onnx==1.20.1",
    "onnxruntime==1.23.2",
    "matplotlib==3.10.8",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["adapters*", "models*", "training*", "evaluation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
